--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <a href="https://vntoine.github.io/1%20-%20Product%20Preview%20Card%20Component/">Product Preview Card Component</a>
+    <a href="/1%20-%20Product%20Preview%20Card%20Component/">Product Preview Card Component</a>
 
 </body>
 </html>
