--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-    <a href="/1%20-%20Product%20Preview%20Card%20Component/">Product Preview Card Component</a>
+    <a href="/1 - Product Preview Card Component/">Product Preview Card Component</a>
+    <a href="/2 - QR Code Component/">QR Code Component</a>
 
 </body>
 </html>
