--- a/2 - QR Code Component/index.html
+++ b/2 - QR Code Component/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Second projet | Frontend Mentor" />
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" type="text/css" />
   <link rel="stylesheet" href="./index.css" />
@@ -22,8 +23,8 @@
   
   <footer class="credits">
     <h1 class="credits-text">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener noreferrer">Frontend Mentor</a><br>
-      Coded by <a href="#">Vntoine</a>
+      Challenge by <a class="link" href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener noreferrer">Frontend Mentor</a><br>
+      Coded by <a class="link" href="#">Vntoine</a>
     </h1>
   </footer>
 
