Ajout d'une redirection vers le projet #3

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <a href="/1 - Product Preview Card Component/">Product Preview Card Component</a>
     <a href="/2 - QR Code Component/">QR Code Component</a>
+    <a href="/3 - NFT Preview Card Component/">NFT Preview Card Component</a>
 
 </body>
 </html>
